--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -171,6 +171,87 @@
             </objects>
             <point key="canvasLocation" x="3254" y="34"/>
         </scene>
+        <!--Chat-->
+        <scene sceneID="C1h-aj-YYo">
+            <objects>
+                <viewController id="Fdt-Jh-nrU" customClass="ChatViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JEW-qN-Ubc">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AZN-q9-iPe">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="chatCell" rowHeight="104" id="58K-3Z-WSg" customClass="chatTableViewCell" customModule="GamerMatch" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="104"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="58K-3Z-WSg" id="BhP-aY-0za">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="103.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P3L-Hp-r4K">
+                                                    <rect key="frame" x="32" y="17" width="68" height="68"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Jon Snow" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Kp-vx-E8Y">
+                                                    <rect key="frame" x="125" y="17" width="235" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I am king of the north" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gUD-ra-CpW">
+                                                    <rect key="frame" x="125" y="46" width="235" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="chatUserPic" destination="P3L-Hp-r4K" id="fkg-If-M3n"/>
+                                            <outlet property="chatUsernameLabel" destination="4Kp-vx-E8Y" id="xCh-g2-6QN"/>
+                                            <outlet property="lastMessageLabel" destination="gUD-ra-CpW" id="Ay8-rG-6z6"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="AZN-q9-iPe" firstAttribute="leading" secondItem="QQ3-2R-b5I" secondAttribute="leading" id="BXW-S5-fI6"/>
+                            <constraint firstItem="AZN-q9-iPe" firstAttribute="bottom" secondItem="QQ3-2R-b5I" secondAttribute="bottom" id="G4N-lO-y8Y"/>
+                            <constraint firstItem="AZN-q9-iPe" firstAttribute="top" secondItem="QQ3-2R-b5I" secondAttribute="top" id="c7S-aO-Sah"/>
+                            <constraint firstItem="AZN-q9-iPe" firstAttribute="trailing" secondItem="QQ3-2R-b5I" secondAttribute="trailing" id="gjS-rN-XSf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="QQ3-2R-b5I"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Chat" id="oJq-CL-QAs"/>
+                    <connections>
+                        <segue destination="fIc-Yj-YGI" kind="show" identifier="chatSegue" id="das-c4-Am8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zqq-W9-1Qw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3253.5999999999999" y="779.46026986506752"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="oFj-NO-HvL">
+            <objects>
+                <viewController hidesBottomBarWhenPushed="YES" id="fIc-Yj-YGI" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="91U-Wd-dPx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="PI7-Ma-HIY"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ujL-IP-XsX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4188" y="779"/>
+        </scene>
         <!--Item-->
         <scene sceneID="Q0w-Eh-l8m">
             <objects>
@@ -201,14 +282,35 @@
                     </tabBar>
                     <connections>
                         <segue destination="WUy-0d-4qX" kind="relationship" relationship="viewControllers" id="V9h-Ru-GKM"/>
+                        <segue destination="VTh-uD-1tx" kind="relationship" relationship="viewControllers" id="LyZ-YX-UC4"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rD4-15-cCR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1689.5999999999999" y="35.082458770614693"/>
         </scene>
+        <!--Chat-->
+        <scene sceneID="Q8r-Tz-EKI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VTh-uD-1tx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Chat" selectedImage="chat" id="BdZ-CO-FgV"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qdu-Oy-YEU">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Fdt-Jh-nrU" kind="relationship" relationship="rootViewController" id="gAB-Ov-a2O"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ugo-gi-2hN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2478" y="780"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="chat" width="30" height="30"/>
         <image name="gameController" width="2400" height="2400"/>
     </resources>
     <inferredMetricsTieBreakers>
