--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -242,10 +242,10 @@
             </objects>
             <point key="canvasLocation" x="3253.5999999999999" y="779.46026986506752"/>
         </scene>
-        <!--View Controller-->
+        <!--Chat Selected View Controller-->
         <scene sceneID="oFj-NO-HvL">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="fIc-Yj-YGI" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="fIc-Yj-YGI" customClass="chatSelectedViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="91U-Wd-dPx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -298,7 +298,7 @@
         <scene sceneID="Q8r-Tz-EKI">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="VTh-uD-1tx" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Chat" selectedImage="chat" id="BdZ-CO-FgV"/>
+                    <tabBarItem key="tabBarItem" title="Chat" image="chat" selectedImage="chat" id="BdZ-CO-FgV"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qdu-Oy-YEU">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
