--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -193,7 +193,7 @@
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jon Snow" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Kp-vx-E8Y">
                                                     <rect key="frame" x="106" y="17" width="261" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -254,6 +254,22 @@
             </objects>
             <point key="canvasLocation" x="3253.5999999999999" y="779.46026986506752"/>
         </scene>
+        <!--Tournament-->
+        <scene sceneID="D2N-WK-7b2">
+            <objects>
+                <viewController id="Rhp-lO-TwH" customClass="TournamentViewController" customModule="GamerMatch" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gY8-hq-OOr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="0us-RO-kBy"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Tournament" id="1gU-Um-ulg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AeK-Df-o0V" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3596" y="1496.4017991004498"/>
+        </scene>
         <!--Chat Selected View Controller-->
         <scene sceneID="oFj-NO-HvL">
             <objects>
@@ -269,11 +285,11 @@
             </objects>
             <point key="canvasLocation" x="4188" y="779"/>
         </scene>
-        <!--Item-->
+        <!--Gamer-->
         <scene sceneID="Q0w-Eh-l8m">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WUy-0d-4qX" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="yvf-PB-R43"/>
+                    <tabBarItem key="tabBarItem" title="Gamer" image="game_controller" selectedImage="game_controller" id="yvf-PB-R43"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TfZ-Bc-Vp2">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -301,6 +317,7 @@
                     <connections>
                         <segue destination="WUy-0d-4qX" kind="relationship" relationship="viewControllers" id="V9h-Ru-GKM"/>
                         <segue destination="VTh-uD-1tx" kind="relationship" relationship="viewControllers" id="LyZ-YX-UC4"/>
+                        <segue destination="zQw-dt-EwK" kind="relationship" relationship="viewControllers" id="xgg-hY-un0"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rD4-15-cCR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -326,11 +343,32 @@
             </objects>
             <point key="canvasLocation" x="2478" y="780"/>
         </scene>
+        <!--Tournament-->
+        <scene sceneID="PA6-qP-zab">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zQw-dt-EwK" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Tournament" image="trophy" selectedImage="trophy" id="c2d-7K-nh8"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cLk-QW-CQW">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Rhp-lO-TwH" kind="relationship" relationship="rootViewController" id="tsM-Qh-v3D"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N5T-wo-h6i" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2434" y="1496"/>
+        </scene>
     </scenes>
     <resources>
         <image name="chat" width="30" height="30"/>
         <image name="gameController" width="2400" height="2400"/>
+        <image name="game_controller" width="30" height="30"/>
         <image name="noAvatarImg" width="500" height="500"/>
+        <image name="trophy" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="dSy-8B-ZhX"/>
