--- a/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
+++ b/GamerMatch/GamerMatch/View/Base.lproj/Main.storyboard
@@ -28,16 +28,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eBm-MF-ufF">
-                                <rect key="frame" x="51" y="318" width="273" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eBm-MF-ufF">
+                                <rect key="frame" x="51" y="315" width="273" height="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tfz-3N-ISO">
-                                <rect key="frame" x="51" y="371" width="273" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tfz-3N-ISO">
+                                <rect key="frame" x="51" y="365" width="273" height="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -72,21 +70,28 @@
                             <constraint firstItem="EEo-Hb-8WA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6Ju-nr-byp"/>
                             <constraint firstItem="Ab0-7N-Y40" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="8t4-6o-hnh"/>
                             <constraint firstItem="Ab0-7N-Y40" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="E0P-2L-R33"/>
+                            <constraint firstItem="h0x-Bx-3ku" firstAttribute="top" secondItem="tfz-3N-ISO" secondAttribute="bottom" constant="20" id="Ez1-lh-JTu"/>
                             <constraint firstItem="Dsi-OW-asN" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="FHG-ax-d9y"/>
+                            <constraint firstItem="tfz-3N-ISO" firstAttribute="leading" secondItem="h0x-Bx-3ku" secondAttribute="leading" id="GNj-yQ-tZI"/>
                             <constraint firstItem="Dsi-OW-asN" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GZV-2b-BGc"/>
                             <constraint firstItem="h0x-Bx-3ku" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Hux-fs-qPE"/>
                             <constraint firstItem="Dsi-OW-asN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="I4Q-db-yvW"/>
+                            <constraint firstItem="tfz-3N-ISO" firstAttribute="trailing" secondItem="h0x-Bx-3ku" secondAttribute="trailing" id="MhX-R6-PvH"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="q3T-ee-TXr" secondAttribute="bottom" constant="110" id="NOl-Tp-GGZ"/>
-                            <constraint firstItem="h0x-Bx-3ku" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="Naa-Lm-96C"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="h0x-Bx-3ku" secondAttribute="trailing" constant="51" id="Xtp-7a-u0Y"/>
+                            <constraint firstItem="tfz-3N-ISO" firstAttribute="top" secondItem="eBm-MF-ufF" secondAttribute="bottom" constant="20" id="OuT-BN-rKE"/>
+                            <constraint firstItem="h0x-Bx-3ku" firstAttribute="leading" secondItem="Ab0-7N-Y40" secondAttribute="leading" id="RJe-UM-gDz"/>
+                            <constraint firstItem="eBm-MF-ufF" firstAttribute="leading" secondItem="tfz-3N-ISO" secondAttribute="leading" id="WVh-dP-GCq"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="q3T-ee-TXr" secondAttribute="trailing" constant="111" id="aVp-AK-eJE"/>
                             <constraint firstItem="EEo-Hb-8WA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="cBH-yz-gpi"/>
+                            <constraint firstItem="eBm-MF-ufF" firstAttribute="top" secondItem="EEo-Hb-8WA" secondAttribute="bottom" constant="101" id="ead-tn-3Es"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ab0-7N-Y40" secondAttribute="trailing" constant="51" id="gUb-LX-Jpn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EEo-Hb-8WA" secondAttribute="trailing" constant="82.5" id="jxL-Ob-mFj"/>
                             <constraint firstItem="Dsi-OW-asN" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="lct-Tm-mRs"/>
+                            <constraint firstItem="eBm-MF-ufF" firstAttribute="trailing" secondItem="tfz-3N-ISO" secondAttribute="trailing" id="ltx-0s-TV3"/>
                             <constraint firstItem="EEo-Hb-8WA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="82.5" id="neN-xk-1T5"/>
                             <constraint firstItem="q3T-ee-TXr" firstAttribute="top" secondItem="Ab0-7N-Y40" secondAttribute="bottom" constant="20" id="oja-p4-bTK"/>
                             <constraint firstItem="q3T-ee-TXr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="110" id="p5m-qy-HT1"/>
+                            <constraint firstItem="h0x-Bx-3ku" firstAttribute="trailing" secondItem="Ab0-7N-Y40" secondAttribute="trailing" id="qmZ-bx-AcF"/>
                             <constraint firstItem="q3T-ee-TXr" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="vXR-qs-phc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
